[package]
name = "dm-live"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"
bytes = "1.5"
nom = "7.1"
dashmap = "5.5"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }
rand = { version = "0.8", features = ["small_rng"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
crossbeam-queue = "0.3"
config = "0.14"
tikv-jemallocator = "0.6.0"
clap = { version = "4", features = ["derive"] }
rustc-hash = "1.1"

# debugging and profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry","env-filter"] }
tracing-chrome = "0.7"
tracing-futures = "0.2"         # 提供 .instrument() 给 async 任务用（给 tokio::spawn）

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
mockall = "0.12"
rand = "0.8"

[features]
default = []
example = []

[[bench]]
name = "packet_cache_bench"
harness = false

[[bench]]
name = "packet_sorter_bench"
harness = false

[[bench]]
name = "dispatcher_bench"
harness = false

[[bench]]
name = "runtime_pool_bench"
harness = false

[[bench]]
name = "packet_pipeline_bench"
harness = false

[[bench]]
name = "ring_buffer_bench"
harness = false

[profile.release] 
debug = true
lto = true
